# libstrophe-cpp

./: .gitignore  CMakeLists.txt  LICENSE  handler_callback.h  libstrophe_cpp.cpp  libstrophe_cpp.h  main.cpp  xmpp_message.cpp  xmpp_message.h  xmpp_stanza.cpp  xmpp_stanza.h
